styled our partners custom taxonomy page and fixed the text alignment on both the meet our team and our story pages

--- a/themes/shanti/sass/layout/_meet-our-team.scss
+++ b/themes/shanti/sass/layout/_meet-our-team.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   margin-top: 3rem;
 
-  h2 {
+  h3 {
     text-transform: uppercase;
     font-size: 1.5rem;
     text-align: right;
